# decaf-emu

./: .travis.yml
src/: CMakeLists.txt
src/common/: log.h
src/common-sdl/: decafsdl_vulkan.cpp
src/common/src/: assert.cpp  log.cpp
src/decaf-qt/: CMakeLists.txt  decafinterface.cpp  decafinterface.h  inputsettings.cpp  inputsettings.h  inputsettings.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sdleventloop.cpp  sdleventloop.h  vulkanwindow.cpp  vulkanwindow.h
src/libcpu/src/: trace.cpp
src/libdecaf/: decaf.h
src/libdecaf/src/: decaf.cpp  decaf_log.cpp  emulog.cpp
src/libdecaf/src/cafe/libraries/: cafe_hle_library_function.h
src/libdecaf/src/debugger/: debugger.cpp
src/libdecaf/src/debugger/ui/: debugger_ui_manager.h
tests/cpu/runner-achurch/: main.cpp
tests/cpu/runner-generated/: main.cpp
tools/gfd-tool/: gfdtool.cpp
tools/pm4-replay/: main.cpp
